# atos

./: AOS_ARCHITECTURE.md  ATOS_ARCHITECTURE.md  Cargo.toml  LinuxCompat.md  Makefile  PackageManager.md  README.md  REAL_HARDWARE_TEST.md  Revm.md  Ristretto.md  WASM-runtime-spec.md  build.rs  linker.ld  x86_64-unknown-atos.json  yellowpaper.md
.cargo/: config.toml
asm/: ap_trampoline.asm  boot.asm  multiboot_header.asm  switch.asm  syscall_entry.asm  trap_entry.asm  user_agents.asm
docs/: wasm-library-grade-plan.md  wasm-library-grade-prompt.md  wasm-vs-wasmi-gap-checklist.md
sdk/aos-ebpf-sdk/: Cargo.toml
sdk/aos-ebpf-sdk/.cargo/: config.toml
sdk/aos-ebpf-sdk/examples/: allow_all.ebpf  conditional.ebpf  deny_all.ebpf
sdk/aos-ebpf-sdk/src/: assembler.rs  binary.rs  disasm.rs  main.rs  types.rs  verifier.rs
src/: agent.rs  agent_loader.rs  block.rs  capability.rs  checkpoint.rs  energy.rs  event.rs  heap.rs  init.rs  logger.rs  mailbox.rs  main.rs  panic.rs  persist.rs  sched.rs  smp.rs  state.rs  sync.rs  syscall.rs  trap.rs
src/agents/: idle.rs  mod.rs  netd.rs  ping.rs  policyd.rs  pong.rs  root.rs  wasm_agent.rs
src/arch/: mod.rs
src/arch/x86_64/: acpi.rs  ata.rs  context.rs  framebuffer.rs  gdt.rs  idt.rs  kaslr.rs  lapic.rs  mod.rs  paging.rs  pci.rs  (+4 more)
src/ebpf/: attach.rs  maps.rs  mod.rs  runtime.rs  types.rs  verifier.rs
src/wasm/: decoder.rs  error.rs  host.rs  mod.rs  runtime.rs  types.rs  validator.rs
tools/: run_qemu.sh  test_network_e2e.sh  test_sdk_e2e.sh
tools/wasm-spec-test/: FAILURES.md
uefi/src/: main.rs  uefi_types.rs
(+17 files in other folders)
